--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <!-- Login Page -->
     <div id="login-container">
         <div class="login-box">
-            <img src="logo.png" alt="CS Logo" class="login-logo">
+            <img src="img/logo.png" alt="CS Logo" class="login-logo">
             <h2>Login do Sistema</h2>
             <form id="login-form">
                 <div class="form-group">
