Fix: Voltar para ANON_KEY - abordagem correta para aplicações client-side

--- a/index.html
+++ b/index.html
@@ -7,13 +7,13 @@
     <script>
         // Definir variáveis do Supabase no window para acesso no cliente
         window.SUPABASE_URL = 'https://todwaiccuifkhhzzydmk.supabase.co';
-        window.SUPABASE_SERVICE_KEY = 'eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6InRvZHdhaWNjdWlka2hoenp5ZG1rIiwicm9sZSI6InNlcnZpY2Vfcm9sZSIsImlhdCI6MTc1Mjc3MDgxMCwiZXhwIjoyMDY4MzQ2ODEwfQ.tLioipNeybv6CdkkxYI4My7oZG3h6gs7W2WoAbI6JtU';
+        window.SUPABASE_ANON_KEY = 'eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6InRvZHdhaWNjdWlma2hoenp5ZG1rIiwicm9sZSI6ImFub24iLCJpYXQiOjE3NTI3NzA4MTAsImV4cCI6MjA2ODM0NjgxMH0.7cLD7-9FIP7KkIdIKMGmP-5OBzW00-3CZP4JOXX7UiU';
         
         // Verificar se as variáveis foram carregadas corretamente
         console.log('Supabase config loaded:', {
             url: window.SUPABASE_URL ? 'OK' : 'MISSING',
-            key: window.SUPABASE_SERVICE_KEY ? 'OK' : 'MISSING',
-            keyLength: window.SUPABASE_SERVICE_KEY ? window.SUPABASE_SERVICE_KEY.length : 0
+            key: window.SUPABASE_ANON_KEY ? 'OK' : 'MISSING',
+            keyLength: window.SUPABASE_ANON_KEY ? window.SUPABASE_ANON_KEY.length : 0
         });
     </script>
     
