--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
         <div id="app">
             <header>
                 <div class="header-content">
-                    <h1><img src="logo.png" alt="logo" class="logo"> CS Aluguel de Mesa e Pula Pula</h1>
+                    <h1><img src="img/logo.png" alt="logo" class="logo"> CS Aluguel de Mesa e Pula Pula</h1>
                     <button id="hamburger-menu" class="hamburger-menu">
                         <span></span>
                         <span></span>
