fix: Remove dependências do WebSim para corrigir erro de CORS na Vercel

--- a/index.html
+++ b/index.html
@@ -3,14 +3,6 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Sistema de Estoque de Eventos</title>
-    <!-- Importmap para Websim Socket -->
-    <script type="importmap">
-    {
-      "imports": {
-        "@websim/websim-socket": "https://esm.websim.com/@websim/websim-socket"
-      }
-    }
-    </script>
     <!-- Configuração das variáveis do Supabase -->
     <script>
         // Definir variáveis do Supabase no window para acesso no cliente
@@ -681,7 +673,7 @@
         2. Right-click on this 'index.html' file in the VS Code Explorer.
         3. Select "Open with Live Server".
         This will open the application in your default web browser at a local address (e.g., http://127.0.0.1:5500/).
-        The application will connect to your Websim backend for data persistence.
+        The application will connect to Supabase for data persistence.
     -->
 </body>
 </html>
