--- a/index.html
+++ b/index.html
@@ -506,6 +506,17 @@
                     </div>
                 </div>
 
+                <div class="form-grid-time">
+                    <div class="form-group">
+                        <label for="add-booking-start-time">Horário de Início</label>
+                        <input type="time" id="add-booking-start-time" required>
+                    </div>
+                    <div class="form-group">
+                        <label for="add-booking-end-time">Horário de Término</label>
+                        <input type="time" id="add-booking-end-time" required>
+                    </div>
+                </div>
+
                 <div id="modal-availability-info" class="availability-info">Preencha as datas para ver a disponibilidade.</div>
                  
                 <div class="form-group">
