feat: Muda sistema de horarios para periodo de dias
- Remove campos de horario do modal de agendamento
- Adiciona campos de data inicio e data termino
- Atualiza logica de disponibilidade para periodo de dias
- Modifica exibicoes para mostrar periodo ao inves de horario
- Atualiza mapeamento do banco para novos campos
- Mantem compatibilidade com dados existentes

--- a/index.html
+++ b/index.html
@@ -462,7 +462,7 @@
             <h2 id="modal-event-name"></h2>
             <p><strong>Cliente:</strong> <span id="modal-client-name"></span></p>
             <p><strong>Data:</strong> <span id="modal-event-date"></span></p>
-            <p><strong>Horário:</strong> <span id="modal-event-time"></span></p>
+            <p><strong>Período:</strong> <span id="modal-event-time"></span></p>
             <p><strong>Endereço do Evento:</strong> <span id="modal-event-address"></span></p>
             <p><strong>Valor:</strong> <span id="modal-price"></span></p>
             <p><strong>Forma de Pagamento:</strong> <span id="modal-payment-method"></span></p>
@@ -506,18 +506,9 @@
                     </div>
                 </div>
 
-                <div class="form-grid-time">
-                    <div class="form-group">
-                        <label for="add-booking-start-time">Horário de Início</label>
-                        <input type="time" id="add-booking-start-time" required>
-                    </div>
-                    <div class="form-group">
-                        <label for="add-booking-end-time">Horário de Término</label>
-                        <input type="time" id="add-booking-end-time" required>
-                    </div>
-                </div>
 
-                <div id="modal-availability-info" class="availability-info">Preencha as datas para ver a disponibilidade.</div>
+
+                <div id="modal-availability-info" class="availability-info">Preencha as datas de início e término para ver a disponibilidade.</div>
                  
                 <div class="form-group">
                     <label for="add-event-name">Nome do Evento/Serviço</label>
